--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       <img
         src="./image/pattern-background-desktop.svg"
         alt=""
-        width="1349px"
-        height="350px"
+        class="container"
       />
       <div class="main_div">
         <img src="./image/illustration-hero.svg" alt="" class="main_img" />
